# myelin

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  Jenkinsfile  licence.txt  readme.md  rust-toolchain  rustfmt.toml
docs/: Pipfile  build-index.py  build-index.sh  crate.html  index.html  main.css  pyproject.toml
environment/: Cargo.toml
environment/examples/: world.rs
environment/src/: collidable_container.rs  collider.rs  collision.rs  collision_detector.rs  collision_handler.rs  lib.rs  object.rs  object_builder.rs  object_container.rs  physics_handler.rs  polygon_translator.rs  prelude.rs  properties.rs  simulation.rs  simulation_impl.rs  spawn_handler.rs  spawn_list.rs  traits.rs  util.rs  world.rs  world_interactor.rs
environment/src/object/: mod.rs
environment/src/physics_handler/: mod.rs
environment/src/physics_handler/physics_handler_facade/: collision_handler_impl.rs  mod.rs  movement_applier_impl.rs
environment/src/quadtree/: builder.rs  mod.rs
environment/src/simulation/: mod.rs  simulation_impl.rs
environment/src/simulation/simulation_impl/: time.rs  world.rs
environment/src/simulation/simulation_impl/world/: nphysics_world.rs
environment/src/simulation_impl/: mod.rs  object_environment.rs  world.rs
environment/src/simulation_impl/world/: collision_filter.rs  force_applier.rs  mod.rs  physics_world_wrapper.rs  rotation_translator.rs
environment/src/world_interactor/: interactable.rs  world_interactor_impl.rs
genetics/: Cargo.toml
genetics/src/: constant.rs  deriver.rs  developer.rs  genome.rs  genome_generator_impl.rs  lib.rs  mutator.rs  neural_network_development_configuration_builder.rs  neural_network_development_orchestrator_impl.rs  orchestrator_impl.rs
genetics/src/deriver/: crossover.rs
genetics/src/developer/: flat.rs  genetic.rs
genetics/src/developer/genetic/: tests.rs
genetics/src/developer/genetic/tests/: clusters_are_only_placed_on_specified_targets.rs  creates_standalone_cluster.rs  does_not_create_connections_disabled_on_hox_gene.rs  places_cluster.rs  (+7 more)
genetics/src/genome_generator_impl/: corpus_callosum_cluster_gene_generator_impl.rs  io_cluster_gene_generator_impl.rs  tests.rs
genetics/src/mutator/: stub.rs
genetics/src/neural_network_development_orchestrator_impl/: genome_deriver_impl.rs  genome_mutator_impl.rs  neural_network_configurator.rs  stub_genome_mutator.rs
genetics/src/neural_network_development_orchestrator_impl/genome_deriver_impl/: crossover.rs
genetics/src/neural_network_development_orchestrator_impl/genome_mutator_impl/: mutation.rs  mutation_applier_impl.rs  mutation_generator_impl.rs  stub.rs  variants.rs
genetics/src/neural_network_development_orchestrator_impl/neural_network_developer_impl/: flat.rs  genetic.rs
genetics/src/orchestrator_impl/: neural_network_builder.rs  neural_network_configurator.rs
geometry/: Cargo.toml
geometry/src/: aabb.rs  convex_hull.rs  lib.rs  point.rs  polygon.rs  radians.rs  vector.rs
geometry/src/polygon/: builder.rs  convex_hull.rs  mod.rs
neural-network/: Cargo.toml  plot.py
neural-network/examples/: plot_neuron.rs
neural-network/scripts/: plot.py  run_plot.sh
neural-network/src/: connection.rs  lib.rs  spiking_neural_network.rs
neural-network/src/neural_network/: spiking_neural_network.rs
neural-network/src/spiking_neural_network/: constant.rs  neuron.rs
object-behavior/: Cargo.toml
object-behavior/src/: lib.rs  neural_network.rs  organism.rs  static_behavior.rs  stochastic_spreading.rs
object-behavior/src/neural_network/: constant.rs  spiking_neural_network.rs
object-behavior/src/neural_network/spiking_neural_network/: constant.rs  neuron.rs
object-behavior/src/stochastic_spreading/: accumulative_deterministic.rs  mod.rs  random_chance_checker_impl.rs
object-data/: Cargo.toml
object-data/src/: lib.rs
radians-macro/: Cargo.toml
radians-macro/src/: lib.rs
radians-macro/tests/: test.rs
random/: Cargo.toml
random/src/: lib.rs  random_chance_checker_impl.rs  random_impl.rs
visualization/: Cargo.toml  package.json  tsconfig.json  tslint.json  webpack.config.js
visualization-client/: Cargo.toml  package.json  tsconfig.json  tslint.json
visualization-client/public/: index.html  style.css
visualization-client/scripts/: build.ps1  build.py  build.sh  serve.py  smoke-test.sh  wasm-loading-test.sh
visualization-client/scripts/smoke-test/: main.py
visualization-client/scripts/wasm-loading-test/: Pipfile  http_server.py  main.py  pyproject.toml
visualization-client/src/: bootstrapper.rs  controller.rs  deserialize.rs  input_handler.rs  lib.rs  main.ts  presenter.rs  view.rs  view_model.rs  websocket.ts
visualization-client/src/presenter/: delta_applier.rs  global_polygon_translator.rs  mod.rs
visualization-client/src/view/: constant.rs  mod.rs
visualization-core/: Cargo.toml
visualization-core/src/: lib.rs  serialization.rs  transmission.rs  view_model.rs  view_model_delta.rs
visualization-core/src/serialization/: bincode.rs  json.rs  mod.rs
visualization-server/: Cargo.toml
visualization-server/examples/: spreading.rs
visualization-server/object_names/: organisms.txt
visualization-server/src/: client.rs  connection.rs  connection_acceptor.rs  constant.rs  controller.rs  fixed_interval_sleeper.rs  lib.rs  name_provider.rs  presenter.rs  serialize.rs  server.rs  snapshot.rs
visualization-server/src/connection/: mod.rs  websocket.rs
visualization-server/tests/object_names/: plants.txt
visualization/examples/: benchmark.rs
visualization/public/: index.html
visualization/scripts/: build.ps1  build.sh
visualization/src/: benchmark.rs  bootstrapper.rs  controller.rs  entry_point.rs  input_handler.rs  js.rs  lib.rs  main.ts  presenter.rs  serialize.rs  server.rs  simulation.rs  transmitter.rs  view.rs  view_model.rs
visualization/src/benchmark_utils/: mod.rs  std.rs  wasm32.rs
visualization/src/view/: constant.rs  js.rs  mod.rs
worldgen/: Cargo.toml
worldgen/src/: generator.rs  lib.rs  name_provider.rs
worldgen/src/generator/: hardcoded_generator.rs  mod.rs
(+70 files in other folders)
