[workspace]
members = [
    "visualization-core",
    "visualization-client",
    "visualization-server",
    "worldgen",
    "object-behavior",
    "object-data",
    "random",
    "neural-network",
    "clone-box",
    "genetics",
]

[patch.crates-io.myelin-engine]
git = "https://github.com/myelin-ai/engine"
branch = "remove-handwritten-mocks"
