[workspace]
members = [
    "visualization-core",
    "visualization-client",
    "visualization-server",
    "worldgen",
    "object-behavior",
    "object-data",
    "random",
    "neural-network",
    "clone-box",
    "genetics",
    "associate-lists",
]

[patch.crates-io]
mockiato = { git = "https://github.com/myelin-ai/mockiato", branch = "release-0.9.0" }
