[package]
name = "myelin-environment"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[dependencies]
myelin-geometry = { path = "../geometry" }
nalgebra = "0.16"
ncollide2d = "0.17"
serde = "1.0"
serde_derive = "1.0"
alga = "0.7"
unordered-pair = "0.2"
nameof = "1.0"

[dependencies.nphysics2d]
# version = "0.9.1"
git = "https://github.com/myelin-ai/nphysics"
rev = "interferences"
default-features = false
features = ["use-wasm-bindgen"]

[dev-dependencies]
maplit = "1.0"

[features]
use-mocks = []
