[package]
name = "myelin-genetics"
description = "Genes, genomes and the mechanisms needed to evolve neural networks from them"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"
publish = false

[dependencies]
mockiato = { version = "0.5", optional = true }
myelin-neural-network = { path = "../neural-network" }
myelin-random = { path = "../random" }
myelin-clone-box = { path = "../clone-box" }
myelin-associate-lists = { path = "../associate-lists" }
nameof = "1.0"
itertools = "0.8"
wonderbox = "0.4"

[dev-dependencies]
mockiato = "0.5"

[features]
use-mocks = ["mockiato"]

[dev-dependencies.myelin-neural-network]
path = "../neural-network"
features = ["use-mocks"]

[dev-dependencies.myelin-random]
path = "../random"
features = ["use-mocks"]
