[package]
name = "myelin-geometry"
description = "Basic linear and vector geometry for two-dimensional Euclidean geometry"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
itertools = "0.7.8"

[dev-dependencies]
nearly_eq = "0.2.4"
