[package]
name = "myelin-neural-network"
description = "Neural networks and their components"
version = "0.1.0"
authors = ["Jan Nils Ferner <jan@myelin.ch>"]
edition = "2018"

[dependencies]
mockiato = { git = "https://github.com/myelin-ai/mockiato", optional = true }
myelin-engine = "0.3"
myelin-geometry = "1.0"
slab = "0.4"

[dev-dependencies]
maplit = "1.0"
mockiato = { git = "https://github.com/myelin-ai/mockiato" }

[features]
use-mocks = ["mockiato"]

[dev-dependencies.myelin-engine]
version = "0.3"
features = ["use-mocks"]
