[package]
name = "myelin-neural-network"
description = "Neural networks and their components"
version = "0.1.0"
authors = ["Jan Nils Ferner <jan@myelin.ch>"]
edition = "2018"

[dependencies]
mockiato = { version = "0.4", optional = true }
slab = "0.4"

[dev-dependencies]
maplit = "1.0"
mockiato = "0.4"
nearly_eq = "0.2"

[features]
use-mocks = ["mockiato"]
