[package]
name = "myelin-object-behavior"
description = """
Implementation of the behaviours and interactions between
objects that can be placed in a simulation"""
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[dependencies]
mockiato = { git = "https://github.com/myelin-ai/mockiato", optional = true }
myelin-engine = "0.3"
myelin-geometry = "1.0"
myelin-neural-network = { path = "../neural-network" }
myelin-genetics = { path = "../genetics" }
rand = "0.5.5"
log = "0.4"

[dev-dependencies]
maplit = "1.0"
mockiato = { git = "https://github.com/myelin-ai/mockiato" }

[dev-dependencies.myelin-engine]
version = "0.3"
features = ["use-mocks"]
