[package]
name = "myelin-object-behavior"
description = """
Implementation of the behaviours and interactions between
objects that can be placed in a simulation"""
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[dependencies]
mockiato = { version = "0.2", optional = true }
myelin-engine = "0.8"
myelin-geometry = "2.2"
myelin-neural-network = { path = "../neural-network" }
myelin-genetics = { path = "../genetics" }
rand = "0.5.5"
log = "0.4"
maplit = "1.0"

[dev-dependencies]
mockiato = "0.2"
nearly_eq = "0.2"

[dev-dependencies.myelin-engine]
version = "0.8"
features = ["use-mocks"]

[dev-dependencies.myelin-neural-network]
path = "../neural-network"
features = ["use-mocks"]
