[package]
name = "myelin-object-behavior"
description = """
Implementation of the behaviours and interactions between
objects that can be placed in a simulation"""
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"
publish = false

[dependencies]
mockiato = { version = "0.5", optional = true }
myelin-engine = "0.14.0"
myelin-neural-network = { path = "../neural-network" }
myelin-genetics = { path = "../genetics" }
myelin-random = { path = "../random" }
myelin-object-data = { path = "../object-data" }
rand = "0.6"
log = "0.4"
maplit = "1.0"
itertools = "0.8"

[dev-dependencies]
mockiato = "0.5"
nearly_eq = "0.2"
myelin-genetics = { path = "../genetics", features = ["use-mocks"] }

[dev-dependencies.myelin-engine]
version = "0.14"
features = ["use-mocks"]

[dev-dependencies.myelin-neural-network]
path = "../neural-network"
features = ["use-mocks"]

[dev-dependencies.myelin-random]
path = "../random"
features = ["use-mocks"]
