[package]
name = "myelin-object-data"
description = "Definition of associated object data (mainly used within visualization)"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[dependencies]
myelin-clone-box = { path = "../clone-box" }
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
mockiato = { version = "0.4", optional = true }

[features]
use-mocks = ["mockiato"]
