[package]
name = "myelin-object-data"
description = "Definition of associated object data (mainly used within visualization)"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
