[package]
name = "radians-macro"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
proc-macro2 = "0.4"
quote = "0.6"
radians = { path = "../radians" }
