[package]
name = "myelin-random"
description = "Random value generation"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[dependencies]
rand = "0.6"
mockiato = { version = "0.5", optional = true }
myelin-clone-box = { path = "../clone-box" }
wonderbox = "0.4"

[dev-dependencies]
mockiato = "0.5"

[features]
use-mocks = ["mockiato"]
