[package]
name = "myelin-random"
description = "Random value generation"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"
publish = false

[dependencies]
rand = "0.7"
rand_hc = "0.2"
mockiato = { version = "0.9.0", optional = true }
myelin-clone-box = { path = "../clone-box" }
paste = "0.1"

[dev-dependencies]
mockiato = "0.9.0"

[features]
use-mocks = ["mockiato"]
