[package]
name = "myelin-visualization-client"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.23"
js-sys = "=0.3.0"
myelin-visualization-core = { path = "../visualization-core" }
myelin-environment = { path = "../environment" }
serde = "1.0"
serde_json = "1.0"
geo = "0.10"
geo-types = "0.2"

[dependencies.web-sys]
version = "0.3.0"
features = [
    "console",
    "Element",
    "EventTarget",
    "HtmlElement",
    "Node",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "EventTarget",
    "Window",
    "CssStyleDeclaration",
]

[dev-dependencies]
maplit = "1.0"
nameof = "0.1"
