[package]
name = "myelin-visualization-client"
description = "In-browser visualization for myelin using a canvas with WASM"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.43"
js-sys = "0.3.0"
myelin-visualization-core = { path = "../visualization-core" }
myelin-engine = "0.14"
myelin-object-data = { path = "../object-data" }

[dependencies.web-sys]
version = "0.3.0"
features = [
    "console",
    "Element",
    "EventTarget",
    "HtmlElement",
    "Node",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "EventTarget",
    "Window",
    "CssStyleDeclaration",
]

[dev-dependencies]
maplit = "1.0"
nameof = "1.0"
mockiato = "0.5"
