[package]
name = "myelin-visualization-core"
description = "Functionality shared by myelin-visualization-client and myelin-visualization-server"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[dependencies]
myelin-engine = "0.13"
myelin-object-data = { path = "../object-data" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.0", optional = true }

[dev-dependencies]
maplit = "1.0"
mockiato = "0.5"

[features]
default = ["use-bincode"]
use-json = ["serde_json"]
use-bincode = ["bincode"]
