[package]
name = "myelin-visualization-server"
description = "In-browser visualization for myelin using a canvas with WASM"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[dependencies]
myelin-engine = "0.4"
myelin-worldgen = { path = "../worldgen" }
myelin-object-behavior = { path = "../object-behavior" }
myelin-visualization-core = { path = "../visualization-core" }
myelin-object-data = { path = "../object-data" }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
simple_logger = "1.0"
clap = "2.32"
websocket = "0.20.3"
nameof = "0.1"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
maplit = "1.0"
mockiato = "0.2"

[dev-dependencies.myelin-engine]
version = "0.4"
features = ["use-mocks"]
