[package]
name = "myelin-visualization-server"
description = "In-browser visualization for myelin using a canvas with WASM"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"
publish = false

[dependencies]
myelin-engine = "0.14.0"
myelin-worldgen = { path = "../worldgen" }
myelin-object-behavior = { path = "../object-behavior" }
myelin-visualization-core = { path = "../visualization-core" }
myelin-object-data = { path = "../object-data" }
myelin-genetics = { path = "../genetics" }
myelin-neural-network = { path = "../neural-network" }
myelin-random = { path = "../random" }

serde = "1.0"
serde_json = "1.0"
log = "0.4"
simple_logger = "1.0"
clap = "2.32"
websocket = "0.22"
nameof = "1.0"
uuid = { version = "0.7", features = ["v4"] }
wonderbox = "0.5"

[dev-dependencies]
maplit = "1.0"
mockiato = { version = "0.9.0" }

[dev-dependencies.myelin-engine]
version = "0.14.0"
features = ["use-mocks"]
