[package]
name = "myelin-visualization"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.23"
js-sys = "=0.3.0"
myelin-environment = { path = "../environment" }
myelin-worldgen = { path = "../worldgen" }
myelin-object-behavior = { path = "../object-behavior" }


[dependencies.web-sys]
version = "0.3.0"
features = [
    "console",
    "Element",
    "EventTarget",
    "HtmlElement",
    "Node",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "EventTarget",
    "Window",
    "CssStyleDeclaration",
]

