[package]
name = "myelin-worldgen"
description = "Generate worlds using pre-defined world generation algorithms"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"

[dependencies]
myelin-engine = "0.9"
myelin-object-data = { path = "../object-data" }
nameof = "1.0"
rand = "0.6"

[dev-dependencies]
myelin-object-behavior = { path = "../object-behavior" }
mockiato = "0.3"
myelin-object-data = { path = "../object-data", features = ["use-mocks"] }

[dev-dependencies.myelin-engine]
version = "0.9"
features = ["use-mocks"]
