[package]
name = "myelin-worldgen"
description = "Generate worlds using pre-defined world generation algorithms"
version = "0.1.0"
authors = [
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
edition = "2018"
publish = false

[dependencies]
myelin-engine = "0.13"
myelin-object-data = { path = "../object-data" }
nameof = "1.0"
rand = "0.6"

[dev-dependencies]
myelin-object-behavior = { path = "../object-behavior" }
mockiato = "0.5"

[dev-dependencies.myelin-engine]
version = "0.13"
features = ["use-mocks"]
